--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "cors": "2.8.5",
     "cross-env": "7.0.3",
-    "express": "4.17.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.17.1",
+    "joi": "^17.9.2",
+    "joi-phone-number": "^5.1.1",
+    "mongo-db": "^1.0.2",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.0",
     "morgan": "1.10.0"
   },
   "devDependencies": {
