--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "joi": "^17.9.2",
     "joi-phone-number": "^5.1.1",
+    "jsonwebtoken": "^9.0.0",
     "mongo-db": "^1.0.2",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
