--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
+    "gravatar": "^1.8.2",
+    "jimp": "^0.22.8",
     "joi": "^17.9.2",
     "joi-phone-number": "^5.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongo-db": "^1.0.2",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "random": "^4.1.0"
   },
   "devDependencies": {
     "eslint": "7.19.0",
