--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "mongoose": "^7.3.0",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
-    "random": "^4.1.0"
+    "nodemailer": "^6.9.3",
+    "random": "^4.1.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "7.19.0",
